--- a/booklist/index.html
+++ b/booklist/index.html
@@ -13,6 +13,7 @@
         color: #fff;
         padding: 5px;
         margin: 5px 0 15px 0;
+        font-weight: bold;
     }
 
     .sucess {
@@ -27,9 +28,8 @@
 
   <title>Book List</title>
 </head>
+
 <body>
-
-
 
   <div class="container">
 
